--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
+<app-service1></app-service1>
+<app-service2></app-service2>
+<app-offres-emploi></app-offres-emploi>
 <app-nav></app-nav>
+
 <router-outlet></router-outlet>
