--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<app-service1></app-service1>
-<app-service2></app-service2>
-<app-offres-emploi></app-offres-emploi>
-<app-nav></app-nav>
+<app-detailproduct></app-detailproduct>
 
 <router-outlet></router-outlet>
